--- a/dpo/dpo.ipynb
+++ b/dpo/dpo.ipynb
@@ -1346,7 +1346,12 @@
     "        ### DPO pairwise preference loss ###\n",
     "        # What we are looking here for is for pos_logprob > neg_logprob. In this case, the margin is pos - neg.\n",
     "        # When the margin is small or negative, this formula helps to penalise the model\n",
-    "        #\n",
+    "        # For the beta, we have set it to 0.5, which means that the margin (pos_logprob - neg_logprob) will be doubled before going into the sigmoid function\n",
+    "        # This means that any reward/penalty is stronger and it leads to a bigger gradient as it becomes more sensitive to the difference\n",
+    "        \n",
+    "        # As the pairwise preference loss might still be low even if the positive is slightly higher than the negative (even though both are unlikely e.g. negative for both log-prob), \n",
+    "        # we implement an anchor ( -pos_logprob.mean() * 0.1) to help ensure that the model is has a higher absolute likelihood for selecting the positive sequences\n",
+    "        # This works by increasing the pos_logprob, which makes the loss smaller, hence promoting the correct sequence with more confidence.\n",
     "        loss = -F.logsigmoid((pos_logprob - neg_logprob) / beta).mean() - pos_logprob.mean() * 0.1\n",
     "\n",
     "        ### Record loss per step and current LR ###\n",
@@ -1865,10 +1870,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e22b224e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error : File not found\n"
+     ]
+    }
+   ],
    "source": [
     "# To be modified\n",
     "string_path = \"\" \n",
@@ -1929,6 +1942,14 @@
     "    print(f\"Error : {e}\")\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ff7a20-b625-4f13-9d6e-e7826db96a4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
